[gd_scene load_steps=67 format=3 uid="uid://c17stdy67dlj3"]

[ext_resource type="Script" path="res://[03] Scripts/Player/Player.gd" id="1_adpyv"]
[ext_resource type="PackedScene" uid="uid://1rmwsh5aup7q" path="res://[01] Assets/Blender/Hammer.blend" id="2_5k5wn"]
[ext_resource type="FontFile" uid="uid://bgm2wyn6824sl" path="res://[01] Assets/Textures/Rubik-Bold.ttf" id="2_06yoy"]
[ext_resource type="Texture2D" uid="uid://c5hlxxgqo7klx" path="res://[01] Assets/Textures/white-circle.png" id="3_6ug3e"]
[ext_resource type="PackedScene" uid="uid://bwgn7cultg210" path="res://[01] Assets/Blender/Rifle.blend" id="3_swplt"]
[ext_resource type="Texture2D" uid="uid://c3v0wd65majoc" path="res://[01] Assets/Textures/MuzzleFlash.png" id="4_phlth"]
[ext_resource type="PackedScene" uid="uid://bmgkb76d0dsrb" path="res://[02] Scenes/place_cannon.tscn" id="5_0ajnf"]
[ext_resource type="Texture2D" uid="uid://b1apouf377n4t" path="res://[01] Assets/Textures/damage.png" id="7_add7w"]
[ext_resource type="AudioStream" uid="uid://ctdoeot3tq5yl" path="res://[01] Assets/Audio/SFX/Player/Hit/Player_Hit 1.mp3" id="8_2e0yg"]
[ext_resource type="AudioStream" uid="uid://cy0vjoskjrhkr" path="res://[01] Assets/Audio/SFX/Player/Hit/Player_Hit 2.mp3" id="9_jnehk"]
[ext_resource type="Texture2D" uid="uid://cgbcjgik2erqn" path="res://[01] Assets/Textures/Heart.png" id="10_nlhfl"]
[ext_resource type="AudioStream" uid="uid://bpeo8ffpqfv1i" path="res://[01] Assets/Audio/SFX/Player/Hit/Player_Hit 3.mp3" id="10_nrsnt"]
[ext_resource type="AudioStream" uid="uid://cf1gtp5hiupn4" path="res://[01] Assets/Audio/SFX/Player/Hit/Player_Hit 4.mp3" id="11_tm3n7"]
[ext_resource type="AudioStream" uid="uid://bljnxlwjvnq7h" path="res://[01] Assets/Audio/SFX/Player/Jump/Player_Jump 1.mp3" id="12_s7w50"]
[ext_resource type="AudioStream" uid="uid://dyhp38iynqg2t" path="res://[01] Assets/Audio/SFX/Player/Jump/Player_Jump 2.mp3" id="13_bixt4"]
[ext_resource type="AudioStream" uid="uid://cj5c5xxewip2e" path="res://[01] Assets/Audio/SFX/Player/Jump/Player_Jump 3.mp3" id="14_wftmj"]
[ext_resource type="AudioStream" uid="uid://btdpin53t6cg6" path="res://[01] Assets/Audio/SFX/Player/Jump/Player_Jump 4.mp3" id="15_pvgl5"]
[ext_resource type="AudioStream" uid="uid://dl68gjcxenfhv" path="res://[01] Assets/Audio/SFX/Player/Run/Player_Run 1.mp3" id="16_kuo3b"]
[ext_resource type="AudioStream" uid="uid://cnuvha06uwfx0" path="res://[01] Assets/Audio/SFX/Player/Run/Player_Run 2.mp3" id="17_or30h"]
[ext_resource type="AudioStream" uid="uid://dyiq50n54plil" path="res://[01] Assets/Audio/SFX/Player/Run/Player_Run 3.mp3" id="18_nsidy"]
[ext_resource type="AudioStream" uid="uid://df6asinwf1tsm" path="res://[01] Assets/Audio/SFX/Player/Run/Player_Run 4.mp3" id="19_sfqtx"]
[ext_resource type="AudioStream" uid="uid://clnqv063fr00i" path="res://[01] Assets/Audio/SFX/Player/Walk/Player_Walk 1.mp3" id="20_jn4cv"]
[ext_resource type="AudioStream" uid="uid://crro2o1pi36dh" path="res://[01] Assets/Audio/SFX/Player/Walk/Player_Walk 2.mp3" id="21_1rrqi"]
[ext_resource type="AudioStream" uid="uid://d4adlgts43nwm" path="res://[01] Assets/Audio/SFX/Player/Walk/Player_Walk 3.mp3" id="22_cetjk"]
[ext_resource type="AudioStream" uid="uid://byoqr4nfpsqv3" path="res://[01] Assets/Audio/SFX/Player/Walk/Player_Walk 4.mp3" id="23_mt2ny"]
[ext_resource type="AudioStream" uid="uid://cetegay82xowl" path="res://[01] Assets/Audio/SFX/Player/Player_Death.mp3" id="24_f3kcl"]
[ext_resource type="AudioStream" uid="uid://dlaba11y04302" path="res://[01] Assets/Audio/SFX/Player/Player_Hammer_Swing.mp3" id="25_mmci7"]
[ext_resource type="AudioStream" uid="uid://cbmyvdd1a1di4" path="res://[01] Assets/Audio/SFX/Player/Player_Rifle_Shoot.mp3" id="26_berdj"]
[ext_resource type="PackedScene" uid="uid://cvb3uocxvde1x" path="res://[02] Scenes/pause_menu.tscn" id="28_xs4bl"]
[ext_resource type="Texture2D" uid="uid://bv6oy42vubp4c" path="res://[01] Assets/Blender/textures/Crystals.png" id="29_jsimm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hwk34"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7vx0c"]
height = 1.4

[sub_resource type="Shader" id="Shader_l81bx"]
code = "/*
	Toon Shader by Firerabbit
	
	MIT License
*/

shader_type spatial;
render_mode ambient_light_disabled;

uniform vec4 color : source_color = vec4(1.0);
uniform sampler2D tex : source_color, hint_default_white;

uniform float shadow : hint_range(0.0, 1.0) = 0.5;
uniform float shadow_width : hint_range(0.001, 0.5) = 0.0;
uniform vec4 shadow_color: source_color = vec4(0.705);

uniform float _specular_smoothness : hint_range(0.0,0.5) = 0.01;
uniform float _specular_strength : hint_range(0.0,0.25) = 0.075;
uniform float _glossiness : hint_range(0.0,0.5) = 0.1;

uniform float _rim_size : hint_range(0,1) = 0.5;
uniform float _rim_smoothness : hint_range(0.0,0.5) = 0.01;


void fragment() {
	ALBEDO = pow(texture(tex, UV).rgb, vec3(2.2)) * color.rgb;
}


void light() {
	float NdotL = dot(NORMAL, LIGHT) * ATTENUATION.x;
	NdotL = smoothstep(shadow - shadow_width, shadow + shadow_width, NdotL);
	
	// specular
	vec3 H = normalize(VIEW + LIGHT);
	float NdotH = max(0, dot(NORMAL, H));
	float specular_intensity = pow(NdotH, 1.0 / _glossiness);
	vec3 specular = vec3(smoothstep(0.5 - _specular_smoothness, 0.5 + _specular_smoothness, specular_intensity));
	
	// rim
	float rimDot = 1.0 - dot(VIEW, NORMAL);
	float rim_intensity = rimDot * NdotL;
	vec3 rim = vec3(smoothstep(1.0 -_rim_size - _rim_smoothness, 1.0 -_rim_size + _rim_smoothness, rim_intensity));
	
	DIFFUSE_LIGHT = mix(ALBEDO * shadow_color.rgb, (ALBEDO + (rim + specular) * _specular_strength) * LIGHT_COLOR.rgb * 0.33, NdotL + 0.33 * (smoothstep(1.0 -_rim_size - _rim_smoothness, 1.0 -_rim_size + _rim_smoothness, rimDot)));
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cg3x7"]
render_priority = 0
shader = SubResource("Shader_l81bx")

[sub_resource type="QuadMesh" id="QuadMesh_gtypl"]
material = SubResource("ShaderMaterial_cg3x7")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="Curve" id="Curve_u6axm"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.166667, 0.230769), 0.0, 0.0, 0, 0, Vector2(0.289855, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7d445"]
curve = SubResource("Curve_u6axm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a1vdu"]
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_7d445")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_irkk1"]
transparency = 1
albedo_texture = ExtResource("4_phlth")
emission_enabled = true
emission = Color(0.576471, 0.447059, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="QuadMesh" id="QuadMesh_p2wyn"]
material = SubResource("StandardMaterial3D_irkk1")

[sub_resource type="Animation" id="Animation_upgmw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("nek/head/eyes/arm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3g58n"]
resource_name = "switch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("nek/head/eyes/arm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.5708, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wr7wr"]
_data = {
"RESET": SubResource("Animation_upgmw"),
"switch": SubResource("Animation_3g58n")
}

[sub_resource type="Animation" id="Animation_m30oi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hands/Hammer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 6.8968e-15, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hands/Rifle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0346248, 0.152777, -0.330046)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hands/place_cannon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0767185, 0.0767185, 0.0767185)]
}

[sub_resource type="Animation" id="Animation_rb0h0"]
resource_name = "gun"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hands/Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.0346248, 0.152777, -0.330046), Vector3(0.035, 0.153, -0.5), Vector3(0.0346248, 0.152777, -0.330046)]
}

[sub_resource type="Animation" id="Animation_4wuvd"]
resource_name = "hammer"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hands/Hammer:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 6.8968e-15, 0), Vector3(1.5708, 0, 0), Vector3(0, 6.8968e-15, 0)]
}

[sub_resource type="Animation" id="Animation_c6h0r"]
resource_name = "place"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hands/place_cannon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.0767185, 0.0767185, 0.0767185), Vector3(0.02, 0.02, 0.02), Vector3(0.0767185, 0.0767185, 0.0767185)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrm47"]
_data = {
"RESET": SubResource("Animation_m30oi"),
"gun": SubResource("Animation_rb0h0"),
"hammer": SubResource("Animation_4wuvd"),
"place": SubResource("Animation_c6h0r")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gu18s"]

[sub_resource type="Animation" id="Animation_p3gcx"]
resource_name = "INTERACTION"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleFill:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Circle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(0.08, 0.08)]
}

[sub_resource type="Animation" id="Animation_hsgor"]
resource_name = "NOTHING"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleFill:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Circle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.01, 0.01)]
}

[sub_resource type="Animation" id="Animation_q7xkl"]
resource_name = "NOTHING_INTERACTING"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleFill:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Circle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.08, 0.08)]
}

[sub_resource type="Animation" id="Animation_e1bse"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleFill:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Circle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.08, 0.08), Vector2(0.01, 0.01)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wgp4p"]
_data = {
"INTERACTION": SubResource("Animation_p3gcx"),
"NOTHING": SubResource("Animation_hsgor"),
"NOTHING_INTERACTING": SubResource("Animation_q7xkl"),
"RESET": SubResource("Animation_e1bse")
}

[sub_resource type="Animation" id="Animation_wspss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_e4reu"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfw5r"]
_data = {
"RESET": SubResource("Animation_wspss"),
"damage": SubResource("Animation_e4reu")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tgxn2"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 4
stream_0/stream = ExtResource("8_2e0yg")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_jnehk")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_nrsnt")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_tm3n7")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dtcb7"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 4
stream_0/stream = ExtResource("12_s7w50")
stream_0/weight = 1.0
stream_1/stream = ExtResource("13_bixt4")
stream_1/weight = 1.0
stream_2/stream = ExtResource("14_wftmj")
stream_2/weight = 1.0
stream_3/stream = ExtResource("15_pvgl5")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_esdv5"]
random_volume_offset_db = 0.5
streams_count = 4
stream_0/stream = ExtResource("16_kuo3b")
stream_0/weight = 1.0
stream_1/stream = ExtResource("17_or30h")
stream_1/weight = 1.0
stream_2/stream = ExtResource("18_nsidy")
stream_2/weight = 1.0
stream_3/stream = ExtResource("19_sfqtx")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fph53"]
random_volume_offset_db = 0.5
streams_count = 5
stream_0/stream = ExtResource("20_jn4cv")
stream_0/weight = 1.0
stream_1/stream = ExtResource("21_1rrqi")
stream_1/weight = 1.0
stream_2/stream = ExtResource("22_cetjk")
stream_2/weight = 1.0
stream_3/stream = ExtResource("23_mt2ny")
stream_3/weight = 1.0
stream_4/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hyt70"]
random_pitch = 1.2
random_volume_offset_db = 0.5
streams_count = 1
stream_0/stream = ExtResource("25_mmci7")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cuonf"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 1
stream_0/stream = ExtResource("26_berdj")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_wytsb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i4fh2"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjtuy"]
_data = {
"RESET": SubResource("Animation_wytsb"),
"die": SubResource("Animation_i4fh2")
}

[node name="Player" type="CharacterBody3D" groups=["shotable"]]
collision_layer = 4
collision_mask = 9
platform_on_leave = 1
script = ExtResource("1_adpyv")

[node name="standing_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_hwk34")

[node name="crouching_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.599574, 0)
shape = SubResource("CapsuleShape3D_7vx0c")
disabled = true

[node name="nek" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="head" type="Node3D" parent="nek"]

[node name="eyes" type="Node3D" parent="nek/head"]

[node name="Camera3D" type="Camera3D" parent="nek/head/eyes"]
fov = 90.0

[node name="Outline" type="MeshInstance3D" parent="nek/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.05958, 0)
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_gtypl")
skeleton = NodePath("")

[node name="Outline2" type="MeshInstance3D" parent="nek/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00900356)
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_gtypl")
skeleton = NodePath("")

[node name="Interaction_ray" type="RayCast3D" parent="nek/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0, 0)
target_position = Vector3(0, 3, 0)

[node name="Interaction_ray2" type="RayCast3D" parent="nek/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0, 0)
target_position = Vector3(0, 7, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="nek/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1349)

[node name="arm" type="Node3D" parent="nek/head/eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.135296, -0.183314, -0.136961)

[node name="hands" type="Node3D" parent="nek/head/eyes/arm"]
transform = Transform3D(-0.339873, 0, 2.97126e-08, 0, 0.339873, 0, -2.97126e-08, 0, -0.339873, 0, 0, 0)

[node name="Hammer" parent="nek/head/eyes/arm/hands" instance=ExtResource("2_5k5wn")]
transform = Transform3D(0.257563, 0, 1.77636e-15, 0, 0.257563, 0, -1.77636e-15, 0, 0.257563, 0, 0, 0)
visible = false

[node name="Rifle" parent="nek/head/eyes/arm/hands" instance=ExtResource("3_swplt")]
transform = Transform3D(0.39059, 0, 0, 0, 0.39059, 0, 0, 0, 0.39059, 0.0346248, 0.152777, -0.330046)

[node name="GPUParticles3D" type="GPUParticles3D" parent="nek/head/eyes/arm/hands/Rifle"]
emitting = false
amount = 1
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_a1vdu")
draw_pass_1 = SubResource("QuadMesh_p2wyn")

[node name="spawnpoint" type="Node3D" parent="nek/head/eyes/arm/hands/Rifle"]

[node name="place_cannon" parent="nek/head/eyes/arm/hands" instance=ExtResource("5_0ajnf")]
transform = Transform3D(0.0767185, 0, -4.44089e-16, 0, 0.0767185, 0, 4.44089e-16, 0, 0.0767185, 0.0351393, 0.266675, -0.0111436)
visible = false

[node name="Label3D" type="Label3D" parent="nek/head/eyes/arm/hands/place_cannon"]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 0, 1.48582, -0.434817)
text = "50"
font_size = 387

[node name="switch" type="AnimationPlayer" parent="nek/head/eyes/arm"]
root_node = NodePath("../../../../..")
libraries = {
"": SubResource("AnimationLibrary_wr7wr")
}

[node name="Timer" type="Timer" parent="nek/head/eyes/arm"]
wait_time = 0.5
one_shot = true

[node name="action" type="AnimationPlayer" parent="nek/head/eyes/arm"]
libraries = {
"": SubResource("AnimationLibrary_xrm47")
}

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="Fps counter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Center" type="Node2D" parent="Fps counter"]
position = Vector2(-238, 12)

[node name="Label" type="Label" parent="Fps counter/Center"]
offset_right = 40.0
offset_bottom = 19.0
theme_override_fonts/font = ExtResource("2_06yoy")
theme_override_font_sizes/font_size = 40
text = "FPS"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 138.0
offset_right = 20.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 40
text = "

"

[node name="Crosshair" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="Node2D" parent="UI/Crosshair"]

[node name="Circle" type="Sprite2D" parent="UI/Crosshair/Center"]
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_6ug3e")

[node name="CircleFill" type="Sprite2D" parent="UI/Crosshair/Center"]
visible = false
scale = Vector2(0.05, 0.05)
texture = SubResource("CompressedTexture2D_gu18s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Crosshair/Center"]
libraries = {
"": SubResource("AnimationLibrary_wgp4p")
}

[node name="TextureRect" type="TextureRect" parent="UI/Crosshair"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -624.0
offset_top = -359.0
offset_right = 587.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.06154, 1.17188)
texture = ExtResource("7_add7w")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Crosshair"]
libraries = {
"": SubResource("AnimationLibrary_rfw5r")
}

[node name="currency" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -464.5
offset_top = 207.5
offset_right = -304.5
offset_bottom = 207.5
grow_horizontal = 2
grow_vertical = 2
text = "Hello darkness my friend"
text_direction = 1

[node name="Crystals" type="Sprite2D" parent="UI"]
position = Vector2(-506.5, 218.5)
scale = Vector2(0.292969, 0.292969)
texture = ExtResource("29_jsimm")

[node name="ProgressBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_left = -545.0
offset_top = 255.0
offset_right = -289.0
offset_bottom = 511.0
scale = Vector2(0.308, 0.308)
max_value = 10.0
value = 10.0
fill_mode = 3
texture_progress = ExtResource("10_nlhfl")

[node name="PlayerAudio" type="Node3D" parent="."]

[node name="TakeHIt" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.836319, 0)
stream = SubResource("AudioStreamRandomizer_tgxn2")
volume_db = 3.0
bus = &"Player"

[node name="Jump" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.860395, 0)
stream = SubResource("AudioStreamRandomizer_dtcb7")
volume_db = 3.0
max_polyphony = 2
bus = &"Player"

[node name="Sprint" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.096293, 0)
stream = SubResource("AudioStreamRandomizer_esdv5")
volume_db = 3.0
pitch_scale = 0.55
bus = &"Player"
doppler_tracking = 1

[node name="Walk" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0646145, 0)
stream = SubResource("AudioStreamRandomizer_fph53")
volume_db = 3.0
pitch_scale = 0.55
bus = &"Player"
doppler_tracking = 1

[node name="Death" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.825818, 0)
stream = ExtResource("24_f3kcl")
volume_db = 3.0
bus = &"Player"

[node name="HammerSwing" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.136107, 0.836104, -0.517888)
stream = SubResource("AudioStreamRandomizer_hyt70")
volume_db = 3.0
max_polyphony = 3
bus = &"Player"
doppler_tracking = 1

[node name="RifleShoot" type="AudioStreamPlayer3D" parent="PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.193627, 0.827041, -0.636992)
stream = SubResource("AudioStreamRandomizer_cuonf")
volume_db = 3.0
max_polyphony = 3
bus = &"Player"

[node name="RayCast3D" type="RayCast3D" parent="PlayerAudio"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjtuy")
}

[node name="Timer" type="Timer" parent="."]

[node name="PauseMenu" parent="." instance=ExtResource("28_xs4bl")]

[connection signal="timeout" from="nek/head/eyes/arm/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="currency_plus"]
